@@ -17,11 +17,8 @@ import com.elster.jupiter.pki.RevokeStatus;
 import com.elster.jupiter.pki.SecurityManagementService;
 import com.elster.jupiter.pki.TrustStore;
 import com.elster.jupiter.pki.TrustedCertificate;
-
-import org.apache.commons.lang3.StringUtils;
-
 import com.elster.jupiter.rest.util.IdWithNameInfo;
-
+import org.apache.commons.lang3.StringUtils;
 import org.bouncycastle.asn1.x500.RDN;
 import org.bouncycastle.asn1.x500.X500Name;
 import org.bouncycastle.asn1.x500.style.BCStyle;
@@ -63,7 +60,6 @@ import java.security.KeyManagementException;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
-import java.security.NoSuchProviderException;
 import java.security.PrivateKey;
 import java.security.Security;
 import java.security.UnrecoverableKeyException;
@@ -79,8 +75,6 @@ import java.util.Optional;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
-
-import static org.bouncycastle.jce.provider.BouncyCastleProvider.PROVIDER_NAME;
 
 @Component(name = "CaService", service = {CaService.class}, property = "name=" + CaService.COMPONENTNAME, immediate = true)
 public class CaServiceImpl implements CaService {
@@ -238,16 +232,28 @@ public class CaServiceImpl implements CaService {
 
             certificateResponse = ejbcaWS.certificateRequest(userData, csrEncoded, CERT_REQ_TYPE_PKCS10, null, RESPONSETYPE_CERTIFICATE);
 
-            LOGGER.info("Response received, parsing as X.509 certificate");
-            InputStream byteArrayInputStream = new ByteArrayInputStream(org.bouncycastle.util.encoders.Base64.decode(certificateResponse.getData()));
-            CertificateFactory certificateFactory = CertificateFactory.getInstance(X509, PROVIDER_NAME);
+            LOGGER.info("Response received");
+            LOGGER.info("\t- responseType: " + certificateResponse.getResponseType());
+            if (certificateResponse.getResponseType()!= null &&
+                    certificateResponse.getResponseType().equals(RESPONSETYPE_CERTIFICATE)) {
+                LOGGER.info("\t- response:\n" + new String(certificateResponse.getData()) + "\n");
+            } else {
+                LOGGER.info("\t- responseData:\n" + javax.xml.bind.DatatypeConverter.printHexBinary(certificateResponse.getData()) +"\n" );
+
+            }
+
+            LOGGER.info("Parsing as X.509 certificate");
+            //using MimeDecoder because the response data is Base64 with line breaks
+            byte[] decodedCertificate = Base64.getMimeDecoder().decode(certificateResponse.getData());
+            InputStream byteArrayInputStream = new ByteArrayInputStream(decodedCertificate);
+            CertificateFactory certificateFactory = CertificateFactory.getInstance(X509);
             x509Cert = (X509Certificate) certificateFactory.generateCertificate(byteArrayInputStream);
 
-            String certEncoded = new String(Base64.getEncoder().encode(x509Cert.getEncoded()));
-            LOGGER.info("Received certificate\n" + BEGIN_CERTIFICATE + certEncoded + END_CERTIFICATE);
+            String certEncoded  = new String(Base64.getEncoder().encode(x509Cert.getEncoded()));
+            LOGGER.info("Final certificate:\n"+ BEGIN_CERTIFICATE +certEncoded+ END_CERTIFICATE);
 
         } catch (ApprovalException_Exception | AuthorizationDeniedException_Exception | EjbcaException_Exception | NotFoundException_Exception |
-                UserDoesntFullfillEndEntityProfile_Exception | WaitingForApprovalException_Exception | IOException | CertificateException | NoSuchProviderException e) {
+                UserDoesntFullfillEndEntityProfile_Exception | WaitingForApprovalException_Exception | IOException | CertificateException e) {
             LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
@@ -263,6 +269,7 @@ public class CaServiceImpl implements CaService {
         try {
             ejbcaWS.revokeCert(certificateTemplate.getIssuerDN(), certificateTemplate.getSerialNumber().toString(SN_HEX), reason);
         } catch (AlreadyRevokedException_Exception | ApprovalException_Exception | AuthorizationDeniedException_Exception | CADoesntExistsException_Exception | EjbcaException_Exception | NotFoundException_Exception | WaitingForApprovalException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -274,6 +281,7 @@ public class CaServiceImpl implements CaService {
         try {
             rs = ejbcaWS.checkRevokationStatus(searchFilter.getIssuerDN(), searchFilter.getSerialNumber().toString(SN_HEX));
         } catch (AuthorizationDeniedException_Exception | CADoesntExistsException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
         return RevokeStatus.fromValue(rs.getReason()).orElseThrow(() -> new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR));
@@ -297,6 +305,7 @@ public class CaServiceImpl implements CaService {
         try {
             return ejbcaWS.getAvailableCAs().stream().map(NameAndId::getName).collect(Collectors.toList());
         } catch (AuthorizationDeniedException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -306,6 +315,7 @@ public class CaServiceImpl implements CaService {
         try {
             return ejbcaWS.getAuthorizedEndEntityProfiles().stream().map(f -> new IdWithNameInfo(f.getId(), f.getName())).collect(Collectors.toList());
         } catch (AuthorizationDeniedException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -315,6 +325,7 @@ public class CaServiceImpl implements CaService {
         try {
             return ejbcaWS.getAvailableCAsInProfile(endEntityId).stream().map(f -> new IdWithNameInfo(f.getId(), f.getName())).collect(Collectors.toList());
         } catch (AuthorizationDeniedException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -324,6 +335,7 @@ public class CaServiceImpl implements CaService {
         try {
             return ejbcaWS.getAvailableCertificateProfiles(endEntityId).stream().map(f -> new IdWithNameInfo(f.getId(), f.getName())).collect(Collectors.toList());
         } catch (AuthorizationDeniedException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -332,10 +344,10 @@ public class CaServiceImpl implements CaService {
     public String getPkiInfo() {
         checkConfiguration();
         StringBuilder result = new StringBuilder();
-        result.append("Version: ");
-        String version = ejbcaWS.getEjbcaVersion();
-        result.append(version).append('\n');
         try {
+            result.append("Version: ");
+            String version = ejbcaWS.getEjbcaVersion();
+            result.append(version).append('\n');
             Map<Integer, String> authorizedEEProfiles = ejbcaWS.getAuthorizedEndEntityProfiles().stream()
                     .collect(Collectors.toMap(NameAndId::getId, NameAndId::getName));
             for (Map.Entry<Integer, String> authorizedEEProfilesEntry : authorizedEEProfiles.entrySet()) {
@@ -349,6 +361,7 @@ public class CaServiceImpl implements CaService {
                         .append("CPs in profile: ").append(cpInProfile).append('\n');
             }
         } catch (AuthorizationDeniedException_Exception | EjbcaException_Exception e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.INVALID_REVOCATION_REASON, e.getLocalizedMessage());
         }
         return result.toString();
@@ -360,6 +373,7 @@ public class CaServiceImpl implements CaService {
             crlBytes = ejbcaWS.getLatestCRL(caName, isDelta);
             return Optional.ofNullable(null != crlBytes ? getX509CRL(crlBytes) : null);
         } catch (CADoesntExistsException_Exception | EjbcaException_Exception | CertificateException | CRLException e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
     }
@@ -467,12 +481,12 @@ public class CaServiceImpl implements CaService {
     private EjbcaWS createWSBackend() {
         EjbcaWSService service;
         setNewDefaultSSLSocketFactory();
-        //CryptoProviderTools.installBCProvider();
         QName Q_NAME = new QName("http://ws.protocol.core.ejbca.org/", "EjbcaWSService");
         String WSDL_LOCATION = "https://" + pkiHost.trim() + ':' + pkiPort + "/ejbca/ejbcaws/ejbcaws?wsdl";
         try {
             service = new EjbcaWSService(new URL(WSDL_LOCATION), Q_NAME);
         } catch (MalformedURLException e) {
+            LOGGER.log(Level.SEVERE, e.getMessage(), e);
             throw new CertificateAuthorityRuntimeException(thesaurus, MessageSeeds.CA_RUNTIME_ERROR, e.getLocalizedMessage());
         }
         return service.getEjbcaWSPort();
